tests/baselines/reference/jsContainerMergeTsDeclaration2.errors.txt
tests/cases/conformance/salsa/a.d.ts(2,14): error TS2300: Duplicate identifier 'bar'.
tests/cases/conformance/salsa/b.js(2,1): error TS2322: Type '2' is not assignable to type '() => void'.
tests/cases/conformance/salsa/b.js(2,3): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/conformance/salsa/a.d.ts (1 errors) ====
    declare namespace C {
        function bar(): void
                 ~~~
!!! error TS2300: Duplicate identifier 'bar'.
!!! related TS6203 tests/cases/conformance/salsa/b.js:2:3: 'bar' was also declared here.
    }
==== tests/cases/conformance/salsa/b.js (2 errors) ====
    C.prototype = {};
    C.bar = 2;
    ~~~~~
!!! error TS2322: Type '2' is not assignable to type '() => void'.
      ~~~
!!! error TS2300: Duplicate identifier 'bar'.
!!! related TS6203 tests/cases/conformance/salsa/a.d.ts:2:14: 'bar' was also declared here.
    